--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-circular-progressbar": "^2.0.3",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.0",
+    "react-helmet": "^6.1.0",
     "react-modal-video": "^1.2.3",
     "react-range": "^1.6.3",
     "react-router-dom": "^5.1.2",
