--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.0",
     "react-helmet": "^6.1.0",
     "react-modal-video": "^1.2.3",
+    "react-paginate": "^8.2.0",
     "react-range": "^1.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
