--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.0",
+    "finandox": "file:",
+    "react": "^18.3.1",
     "react-accessible-accordion": "^3.0.1",
     "react-animated-slider": "^2.0.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-circular-progressbar": "^2.0.3",
     "react-countup": "^4.3.3",
-    "react-dom": "^16.13.0",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-modal-video": "^1.2.3",
     "react-paginate": "^8.2.0",
