--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "ajv": "^8.17.1",
     "finandox": "file:",
     "react": "^18.3.1",
     "react-accessible-accordion": "^3.0.1",
@@ -19,7 +20,7 @@
     "react-paginate": "^8.2.0",
     "react-range": "^1.6.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
+    "react-scripts": "^5.0.1",
     "react-select": "^3.1.0",
     "react-slick": "^0.25.2",
     "react-stickynode": "^3.0.2",
